{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "f01322ce-f53e-4d4d-97fb-780387994883",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "f96e0255-0ca5-4f43-bb8c-e5292f3246b5",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "d093ef31-e9de-4ed6-81ba-af52f3149387",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "03494789-671c-4990-b4a1-efd4b437962f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "95a1d39b-d229-46fd-80bc-43f62a59b872",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68fcfdb3-87a1-4d58-b1a3-3dba94056cb6",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dcf616e2-3484-4e4c-8264-5ea6fa315215",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}